Fix display issue on small devices.

--- a/deb/openmediavault/workbench/src/app/shared/components/alert-panel/alert-panel.component.scss
+++ b/deb/openmediavault/workbench/src/app/shared/components/alert-panel/alert-panel.component.scss
@@ -25,8 +25,12 @@
     margin-right: 16px;
   }
 
-  .mat-card-content {
-    margin-bottom: unset;
+  .content-wrapper {
+    overflow: hidden;
+
+    &.mat-card-content {
+      margin-bottom: unset;
+    }
   }
 
   .mat-card-actions {
